--- a/index.htm
+++ b/index.htm
@@ -3,8 +3,11 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title></title>
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0.5,maximum-scale=2,user-scalable=yes" />
+<title>支語警察的日常</title>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta http-equiv="Cache-Control" content="no-cache, no-store, max-age=0, must-revalidate">
+<meta http-equiv="pragma" content="no-cache" />
+<meta http-equiv="expires" content="0" />
 
 <script src="https://code.jquery.com/jquery-3.5.0.min.js"
  integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
@@ -30,6 +33,11 @@ body{
 	height:400px;
 }
 #photo {
+}
+#imgpreload{
+	height:50px;
+	overflow:hidden;
+	text-align:right;
 }
 div{
 box-sizing:border-box;
@@ -147,7 +155,7 @@ var 劇情資料;
 	console.log( 劇情資料 );
 
 function poi(){
-	$('#ddd').html('');//初始化
+	//$('#ddd').html('');//初始化
 	狀態.對話狀態=0;
 	狀態.場景狀態=0;
 	console.log( 狀態 );
@@ -313,7 +321,7 @@ function poi_photo(){
 </head>
 <body>
 
-<div id='ddd'>ddd</div>
+<div id='ddd'>區塊</div>
 
 </body>
 </html>
