--- a/index.htm
+++ b/index.htm
@@ -78,72 +78,72 @@ var 劇情資料;
 	劇情資料={
 		0:[
 			"緊急狀況！各位同志！↵↵我們發現我們組織中出了一個叛徒",
-			'http://upload.cc/i1/2020/04/18/gk0rUj.png?w=300',
+			'./img/gk0rUj.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		1:[
 			'元首你是了解我的，我從來不做仗勢欺人的事↵我喜歡被動',
-			'https://upload.cc/i1/2020/04/18/OaYnsp.png?w=300',
+			'./img/OaYnsp.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		2:[
 			'元首你是了解我的，以我的習慣，萬事不求人',
-			'https://upload.cc/i1/2020/04/18/bCUxsH.png?w=300',
+			'./img/bCUxsH.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		3:[
 			'元首你是了解我的，我大隊長至今…俗稱處男',
-			'https://upload.cc/i1/2020/04/18/cL0aMP.png?w=300',
+			'./img/cL0aMP.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		3:[
 			'元首你是了解我的↵如果是我↵不好有活著的人來告狀',
-			'https://upload.cc/i1/2020/04/18/ly4UBA.png?w=300',
+			'./img/ly4UBA.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		4:[
 			'元首你是了解我的，如果是我出手，那趴在桌子上的，應該是他老公',
-			'https://upload.cc/i1/2020/04/18/z7Jb9Y.jpg?w=300',
+			'./img/z7Jb9Y.jpg?w=300',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		5:[
 			'老公你最好說明一下',
-			'https://upload.cc/i1/2020/04/18/j7EUBZ.png?w=300',
+			'./img/j7EUBZ.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		6:[
 			'元首你是了解我的，我現在全套已經不給中出了↵中出要加錢的',
-			'https://upload.cc/i1/2020/04/18/mTELHu.png?w=300',
+			'./img/mTELHu.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		7:[
 			'元首你是了解我的，我只會舔舔明日香而已',
-			'https://upload.cc/i1/2020/04/18/VAPaWc.jpg?w=300',
+			'./img/VAPaWc.jpg?w=300',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		8:[
 			'元首你是了解我的，我只是一隻貓',
-			'https://upload.cc/i1/2020/04/18/ArEIWs.png?w=300',
+			'./img/ArEIWs.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		9:[
 			'元首你是了解我的，我…我…窩…窩叭江南STYLE~!',
-			'https://upload.cc/i1/2020/04/18/ZEmYqT.png?w=300',
+			'./img/ZEmYqT.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		10:[
 			'元首你是了解我的，我只是想露個奶而已',
-			'https://upload.cc/i1/2020/04/18/YnE7yl.png?w=300',
+			'./img/YnE7yl.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		11:[
 			'我們組織中出了一個叛徒!↵↵報告元首 女警隊已經將其處決! 犯人在男警隊中!',
-			'https://upload.cc/i1/2020/04/18/aKu9nq.png?w=300',
+			'./img/aKu9nq.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 		12:[
 			'元首你是了解我的，我……我不知道………',
-			'https://upload.cc/i1/2020/04/18/nCbk7Y.png?w=300',
+			'./img/nCbk7Y.png',
 			{'width':'300px','height':'200px','position':'relative','top':'50px','left':'50px','display':'block',},
 		],
 	};
@@ -273,7 +273,7 @@ function poi_chat(){
 ////
 function poi_photo(){
 	//console.log( in1,in2 );//6
-	//var str="//i0.wp.com/upload.cc/i1/2020/04/18/gk0rUj.png?w=300";
+	//var str="//i0.wp.com/upload.cc/i1/2020/04/18/gk0rUj.png";
 	//場景狀態=場景狀態+1;
 	var src=劇情資料[狀態.場景狀態][1];
 	var str=劇情資料[狀態.場景狀態][2];
